# Zygisk-Il2CppDumper

./: README.md  README.zh-CN.md  Tea  build.gradle  module.gradle  settings.gradle
module/src/main/cpp/: CMakeLists.txt  game.h  hack.cpp  hack.h  hook.cpp  hook.h  il2cpp-class.h  il2cpp.cpp  il2cpp.h  il2cpp_dump.cpp  il2cpp_dump.h  log.h  main.cpp  script_helper.h  string_utils.cpp  string_utils.h  zygisk.hpp
module/src/main/cpp/Dobby/builtin-plugin/BionicLinkerRestriction/: bionic_linker_restriction.cc
module/src/main/cpp/Dobby/source/: Interceptor.h
module/src/main/cpp/Dobby/source/InterceptRouting/: InterceptRouting.cpp
module/src/main/cpp/Dobby/source/UserMode/MultiThreadSupport/: ThreadSupport.h
module/src/main/cpp/Dobby/tests/InstructionRelocation/x64/: test_x64_instruction_relocation.cc
module/src/main/cpp/il2cppapi/2017.1.0f3/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2017.1.3f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2017.2.0f3/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2017.2.1f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2018.1.0f2/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2018.2.0f2/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2018.3.0f2/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2018.3.8f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2018.4.18f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.1.0f2/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.2.0f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.3.0f6/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.3.7f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.4.15f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2019.4.21f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2020.1.0f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2020.1.11f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2020.2.0f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2020.2.4f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2021.1.0f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/2021.2.0f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.3.0f4/: il2cpp-api-functions.h  il2cpp-class.h
module/src/main/cpp/il2cppapi/5.3.2f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.3.3f1/: il2cpp-api-functions.h  il2cpp-class.h
module/src/main/cpp/il2cppapi/5.3.5f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.4.0f3/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.4.1f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.4.4f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.5.0f3/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.5.1f1/: il2cpp-class.h
module/src/main/cpp/il2cppapi/5.6.0f3/: il2cpp-class.h
module/src/main/cpp/whale/: CMakeLists.txt
module/src/main/cpp/whale/include/: whale.h
module/src/main/cpp/whale/src/: interceptor.cc  interceptor.h  whale.cc
module/src/main/cpp/whale/src/android/: jni_helper.h  native_bridge.h
module/src/main/cpp/whale/src/android/art/: art_hook_param.h  art_jni_trampoline.cc  art_jni_trampoline.h  art_method.cc  art_method.h  art_runtime.cc  art_runtime.h  art_symbol_resolver.cc  art_symbol_resolver.h  java_types.cc  java_types.h  modifiers.h  native_on_load.cc  native_on_load.h  scoped_thread_state_change.cc  scoped_thread_state_change.h  well_known_classes.cc  well_known_classes.h
module/src/main/cpp/whale/src/assembler/: assembler.cc  assembler.h  label.h  managed_register.h  memory_region.cc  memory_region.h  value_object.h
module/src/main/cpp/whale/src/assembler/vixl/: CMakeLists.txt  code-buffer-vixl.cc  cpu-features.h  globals-vixl.h
module/src/main/cpp/whale/src/assembler/x86/: assembler_x86.cc  assembler_x86.h  constants_x86.h  managed_register_x86.cc  managed_register_x86.h  registers_x86.h
module/src/main/cpp/whale/src/assembler/x86_64/: assembler_x86_64.cc  assembler_x86_64.h  constants_x86_64.h  managed_register_x86_64.cc  managed_register_x86_64.h  registers_x86_64.h
module/src/main/cpp/whale/src/base/: align.h  array_ref.h  bit_utils.h  cxx_helper.h  enums.h  logging.h  macros.h  offsets.h  primitive_types.h  singleton.h  stringprintf.h
module/src/main/cpp/whale/src/dbi/: backup_code.h  hook_common.cc  hook_common.h  instruction_rewriter.h  instruction_set.cc  instruction_set.h
module/src/main/cpp/whale/src/dbi/arm/: decoder_arm.cc  decoder_arm.h  decoder_thumb.cc  decoder_thumb.h  inline_hook_arm.cc  inline_hook_arm.h  instruction_rewriter_arm.cc  instruction_rewriter_arm.h  registers_arm.h
module/src/main/cpp/whale/src/dbi/arm64/: decoder_arm64.cc  decoder_arm64.h  inline_hook_arm64.cc  inline_hook_arm64.h  instruction_rewriter_arm64.cc  instruction_rewriter_arm64.h  registers_arm64.h
module/src/main/cpp/whale/src/dbi/darwin/: macho_import_hook.cc  macho_import_hook.h
module/src/main/cpp/whale/src/dbi/x86/: inline_hook_x86.cc  inline_hook_x86.h  instruction_rewriter_x86.cc  instruction_rewriter_x86.h  intercept_syscall_x86.cc  intercept_syscall_x86.h
module/src/main/cpp/whale/src/dbi/x86_64/: inline_hook_x86_64.cc  inline_hook_x86_64.h  instruction_rewriter_x86_64.cc  instruction_rewriter_x86_64.h
module/src/main/cpp/whale/src/libffi/: dlmalloc.c  ffi.h  ffi_cxx.cc  ffi_cxx.h  fficonfig.h  ffitarget.h
module/src/main/cpp/whale/src/libffi/aarch64/: ffi_arm64.c  internal.h  sysv_arm64.S
module/src/main/cpp/whale/src/libffi/arm/: ffi_armv7.c  internal.h  sysv_armv7.S
module/src/main/cpp/whale/src/libffi/platform_include/: ffi_arm64.h  ffi_armv7.h  ffi_i386.h  ffi_x86_64.h  fficonfig_arm64.h  fficonfig_armv7.h  fficonfig_i386.h  fficonfig_x86_64.h  ffitarget_arm64.h  ffitarget_armv7.h  ffitarget_i386.h  ffitarget_x86_64.h
module/src/main/cpp/whale/src/platform/: memory.cc  memory.h
module/src/main/cpp/whale/src/simulator/: code_simulator.cc  code_simulator.h  code_simulator_arm64.cc  code_simulator_arm64.h  code_simulator_container.cc  code_simulator_container.h
module/src/main/cpp/xdl/: xdl.c  xdl_iterate.c  xdl_iterate.h  xdl_linker.c  xdl_linker.h  xdl_lzma.c  xdl_lzma.h  xdl_util.c  xdl_util.h
module/src/main/cpp/xdl/include/: xdl.h
(+61 files in other folders)
